# Vanadin

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: deploy.yml  release.yml  rust.yml
src/: main.rs  vanadir.rs
src/cli/: execute.rs  info.rs  init.rs  mod.rs
vanadin-book/: book.toml
vanadin-book/src/: SUMMARY.md
vanadin-book/src/basics/: README.md  first-project.md  installation.md  pre-post-tasks.md
vanadin-book/src/scripting/: README.md  builtin-features.md  coding-js.md  env-mod.md  fs-mod.md  http-mod.md  log-mod.md  math-mod.md  process-mod.md  sys-mod.md
vanadin-book/src/scripting/tools/: README.md  cargo.md  node.md  python.md
vanadin-tasks/: Cargo.toml  README.md
vanadin-tasks/src/: error.rs  js.rs  lib.rs  runner.rs  task.rs  tests.rs  types.rs  utils.rs
vanadin-tasks/src/modules/: env.rs  fs.rs  globals.rs  http.rs  log.rs  math.rs  mod.rs  process.rs  sys.rs
vanadin-tasks/src/modules/tools/: cargo.rs  mod.rs  node.rs  python.rs
