[package]
name = "vanadin-tasks"
version = "0.1.0"
edition = "2021"
description = "Used by the vanadin project"
license = "MIT"
documentation = "https://docs.rs/vanadin-tasks"
homepage = "https://github.com/vanadis-rs/vanadis"
repository = "https://github.com/vanadis-rs/vanadis"

[dependencies]
rquickjs = { version = "0.5.0", features = ["loader", "dyn-load"] }

log = { workspace = true }
simplelog = { workspace = true }

sysinfo = "0.30.5"
tiny_http = { version = "0.12.0", default-features = false }
